Add generateWebApiDefinition
